# Mizan

./: .dockerignore  .env.example  .env.production.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  PSD.md  Procfile  README.md  ROADMAP.md  SECURITY.md  TODO.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  fly.toml  pyproject.toml  railway.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: accuracy_report.md  bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-api.yml  deploy-fly.yml  deploy-gce.yml  deploy-hetzner.yml  deploy-website.yml
alembic/: env.py
alembic/versions/: 2025_01_01_0001_initial_schema.py  2025_01_02_0002_library_and_embeddings.py  2026_03_18_0003_bm25_search_indexes.py  2026_03_18_0004_verse_translations.py
docker/: Dockerfile
docs/: CODE_QUALITY_2026-06-05.md  EMBEDDING_AB_2026-06-06.md  RUNBOOK.md  TECH_STACK_REVIEW_2026-06-05.md
docs/adr/: 0001-graph-storage-postgres-vs-graphdb.md  0002-edge-derivation-strategy.md
docs/design/: README.md  T2-concept-cross-reference-graph.md
docs/diagrams/: concept-graph.mmd
docs/superpowers/specs/: 2026-03-18-semantic-search-optimization-design.md
eval/: baseline_2026-06-05.md  queries.json  run_eval.py  run_offline_ab.py
quran/uthmani/: quran-uthmani.sql  quran-uthmani.txt
quran/uthmani-min/: quran-uthmani-min-aya.txt  quran-uthmani-min.sql  quran-uthmani-min.txt  quran-uthmani-min.xml
scripts/: embed_library.py  embed_quran.py  generate_seed_sql.py  ingest_hadith.py  ingest_library_source.py  ingest_masaq.py  ingest_tafsir.py  ingest_tanzil.py  ingest_translations.py  seed_database.py  start.sh
src/mizan/: __init__.py
src/mizan/analysis/: __init__.py
src/mizan/api/: dependencies.py  limiters.py  main.py
src/mizan/application/: __init__.py
src/mizan/domain/: STANDARDS.py  __init__.py  exceptions.py
src/mizan/infrastructure/: __init__.py  config.py
tests/: __init__.py  conftest.py
tests/integration/: conftest.py  test_api_health.py  test_api_library.py  test_api_search.py  test_api_verses.py  test_rate_limiting.py
tests/unit/: __init__.py  test_embedding_prefix_policy.py  test_embedding_services.py  test_language_aware_rerank.py  test_morphology_preview_flag.py  test_reranker_service.py  test_semantic_search_service.py
tests/unit/domain/: test_enums.py  test_exceptions.py  test_services.py  test_value_objects.py
website/: .dockerignore  .env.example  .eslintrc.json  .prettierignore  ARCHITECTURE.md  Dockerfile  OPTIMIZATION_SUMMARY.md  PERFORMANCE.md  README.md  jest.config.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
website/.github/workflows/: deploy.yml
website/__tests__/: errors.test.ts  verse-selector.test.tsx
website/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx  sitemap.ts
website/app/about/: page.tsx
website/app/docs/: page.tsx
website/app/license/: page.tsx
website/app/playground/: page.tsx
website/app/privacy/: page.tsx
website/app/search/: page.tsx
website/app/terms/: page.tsx
website/components/: coming-soon.tsx  language-switcher.tsx  providers.tsx  scroll-to-top.tsx
website/components/animated/: animated-counter.tsx  aurora-background.tsx  floating-particles.tsx  glass-card.tsx  index.ts  spotlight.tsx  text-generate.tsx
website/components/icons/: github.tsx
website/components/landing/: cta.tsx  demo-preview.tsx  features.tsx  hero.tsx  index.ts  stats.tsx
website/components/ui/: badge.tsx  (+7 more)
website/config/: navigation.ts  site.ts
website/e2e/: search.spec.ts
website/hooks/: index.ts  use-local-storage.ts  use-verse-analysis.ts
website/lib/: utils.ts
website/public/: robots.txt  site.webmanifest
website/types/: api.ts  index.ts
(+94 files in other folders)
