[project]
name = "mizan"
version = "0.1.0"
description = "High-precision Quranic text analysis engine with verified accuracy"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Mizan Contributors" }
]
maintainers = [
    { name = "Mizan Contributors" }
]
keywords = [
    "quran",
    "arabic",
    "analysis",
    "abjad",
    "gematria",
    "islamic",
    "text-analysis",
    "nlp",
    "scholarly",
    "tanzil",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Religion",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Religion",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Natural Language :: Arabic",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/ahmetabdullahgultekin/Mizan"
Documentation = "https://github.com/ahmetabdullahgultekin/Mizan#readme"
Repository = "https://github.com/ahmetabdullahgultekin/Mizan.git"
Issues = "https://github.com/ahmetabdullahgultekin/Mizan/issues"
Changelog = "https://github.com/ahmetabdullahgultekin/Mizan/blob/main/CHANGELOG.md"

dependencies = [
    # Core Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # Caching
    "redis>=5.0.0",

    # Logging
    "structlog>=24.1.0",

    # Arabic NLP (Tier 1-2)
    "pyarabic>=0.6.15",
    "regex>=2023.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.92.0",
    "mypy>=1.8.0",
    "ruff>=0.1.9",
    "pre-commit>=3.6.0",
]

# Minimal install without ML dependencies (for basic text analysis)
minimal = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "redis>=5.0.0",
    "structlog>=24.1.0",
    "pyarabic>=0.6.15",
]

# Full ML capabilities (Tier 4 - Experimental)
ml = [
    "transformers>=4.36.0",
    "torch>=2.1.0",
    "sentence-transformers>=2.2.0",
    "gensim>=4.3.0",
    "networkx>=3.2.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mizan"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["redis.*", "asyncpg.*", "pyarabic.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.isort]
known-first-party = ["mizan"]

[tool.coverage.run]
source = ["src/mizan"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
